--- a/pointers.html
+++ b/pointers.html
@@ -132,7 +132,7 @@
 <b>void</b> main()
 {
   <b>int</b> number = 8;
-  printf(<u>"%d"</u>,&number)
+  printf(<u>"%d"</u>,&number);
 }
       </code></pre>
         </figure>
