--- a/casting.html
+++ b/casting.html
@@ -57,7 +57,7 @@
   <section id="main">
 
     <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
-    <h1 class="head-right">התוכנית הראשונה שלנו</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
+    <h1 class="head-right">Casting</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
 
     <div class="First-Para">
       <p>
